# app-web-prueba

./: .gitignore  .replit  =0.3.2  Chatbot (9).json  Dockerfile  JURISPRUDENCIA_README.md  LICENSE  MINIO_SETUP.md  RAG Vectorizer - MinIO (3).json  README.md  app.py  calculos.py  config.py  database.py  nixpacks.toml  pyproject.toml  replit.nix  requirements.txt  routes_jurisprudencia.py  setup_database.py  tags.txt  test_connection.py  test_connection_fixed.py
blueprints/creacion_sentencias/: __init__.py  document_generator.py  routes.py  schemas.py  service.py
blueprints/escritos_liquidacion/: __init__.py  document_generator.py  routes.py  schemas.py  service.py
datos/: MODELO ANT 03.2018. COMPLETO..docx  MODELO POST 01.2021 COMPLETO.docx  MODELO POST 3.18 COMPLETO..docx  documento_editado.docx  documento_temporal.docx  indices_bcra.json  plantilla.docx
datos/calculadora_uma/: documento_editado.docx  (+2 more)
models/: ModelUser.py  calculos.py  database.py  demanda.py  session_validation.py  supabase_connection.py
n8n_flows/: Jurisprudencia_Chatbot.json  Jurisprudencia_Chatbot_CORRECTED.json  Jurisprudencia_Vectorizer_CORRECTED.json  Jurisprudencia_Vectorizer_FINAL.json  N8N_SETUP_GUIDE.md
services/: bcra_indices.py  calculos.py  minio_client.py
sql/: create_vector_index_after_first_doc.sql
templates/: base_datos_casos.html  calculadora_movilidad.html  calculadora_uma.html  footer.html  formulario.html  formulario_demanda.html  home.html  index.html  menu.html  nav.html  nosequees.html  prueba.html  resultado.html  resultado_calculadora_uma.html
(+123 files in other folders)
