[tool.poetry]
name = "repl-nix-app-web-prueba"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
sqlalchemy = "^2.0.34"
xhtml2pdf = "^0.2.16"
babel = "^2.16.0"
docx = "^0.2.4"
docxtpl = "^0.18.0"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
werkzeug = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
